# op-server

./: CONTRIBUTING.md  OpServer.podspec  README.md  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: JNIOnLoad.cpp  OPServer.cpp  OPServer.hpp
android/src/main/java/com/opengineering/opserver/: OpServerModule.kt  OpServerPackage.kt
cpp/: Server.cpp
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/opengineering/opserver/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/OpServerExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/OpServerExample.xcodeproj/: project.pbxproj
example/ios/OpServerExample.xcodeproj/xcshareddata/xcschemes/: OpServerExample.xcscheme
example/src/: App.tsx
ios/: OpServer.h  OpServer.mm
src/: NativeOpServer.ts  index.tsx
